force-app/main/default/objects/ssot__ProgramEnrollment__dlm/fields/ssot__CurrentYearDisbCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentYearDisbCount__c</fullName>
    <label>Current Year Disbursed Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentYearDisbCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>