force-app/main/default/objects/ssot__ProgramEnrollment__dlm/fields/ssot__PreviousMonthDisbCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreviousMonthDisbCount__c</fullName>
    <label>Previous Month Disbursed Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviousMonthDisbCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>