force-app/main/default/objects/ssot__ProgramEnrollment__dlm/fields/ssot__ProgramEnrollmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProgramEnrollmentStatus__c</fullName>
    <label>Program Enrollment Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProgramEnrollmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>