force-app/main/default/objects/ssot__ProgramEnrollment__dlm/fields/ssot__rel_1716668770826_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668770826_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramEnrollment_ProgramId_map_Prog_rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>ProgramEnrollment_ProgramId_map_Prog_rel</relationshipLabel>
    <relationshipName>rel_1716668770826_end</relationshipName>
    <type>Lookup</type>
</CustomField>