force-app/main/default/objects/ssot__ProgramEnrollment__dlm/fields/ssot__rel_1716668776073_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668776073_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramEnrollment_AccountId_map_Acco_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ProgramEnrollment_AccountId_map_Acco_rel</relationshipLabel>
    <relationshipName>rel_1716668776073_end</relationshipName>
    <type>Lookup</type>
</CustomField>