force-app/main/default/objects/ssot__ProgramEnrollment__dlm/fields/ssot__rel_1718544759528_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718544759528_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramEnrollment_AccountContactId_m_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>ProgramEnrollment_AccountContactId_m_rel</relationshipLabel>
    <relationshipName>rel_1718544759528_end</relationshipName>
    <type>Lookup</type>
</CustomField>